src/test/ui/error-codes/E0110.stderr
error[E0110]: lifetime parameters are not allowed on this type
  --> $DIR/E0110.rs:11:14
   |
11 | type X = u32<'static>; //~ ERROR E0110
   |              ^^^^^^^ lifetime parameter not allowed on this type

error: aborting due to previous error

